Fix de estilos y scrollbar

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,8 +8,8 @@
 main {
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  min-width: 100%;
+  width: 100%;
   height: 100%;
+  box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
