--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,12 +1,12 @@
 .navbar {
   display: flex;
+  padding: 0;
   align-items: center;
   width: 100%;
   justify-content: center;
   height: 80px;
   box-sizing: border-box;
   box-shadow: 0 1.2px 2px rgba(0, 0, 0, 0.2);
-  min-width: 1800px;
 }
 
 .navContent {
@@ -51,8 +51,6 @@
 
 .navList li {
   cursor: pointer;
-  display: flex;
-  align-items: center;
   box-sizing: border-box;
   font-weight: 500;
   font-size: 15px;
@@ -64,6 +62,11 @@
   height: 100%;
   padding: 4px 10px 0;
   border-bottom: 4px solid transparent;
+  box-sizing: border-box;
+}
+
+.nav-li:hover {
+  border-bottom: 4px solid #916f5b;
 }
 
 .nav-active {
@@ -72,18 +75,18 @@
   height: 100%;
   padding: 4px 10px 0;
   box-sizing: border-box;
-  border-bottom: 4px solid #997a6a;
-  color: #997a6a;
+  border-bottom: 4px solid #916f5b;
+  color: #916f5b;
   justify-content: center;
+
+  a{
+    width: 60px;
+  }
 }
 
 a {
   color: black;
   text-decoration: none;
-}
-
-a:hover {
-  font-weight: 800;
 }
 
 .authButtons {
