--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,16 +8,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  width: 100%;
   display: flex;
   min-width: 320px;
   min-height: 100vh;
 }
 
-html{
-  font-family: 'Poppins', sans-serif;
+#root{
+  width: 100%;
+  height: 100%;
 }
 
 input,
