--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -41,7 +41,6 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-content: space-evenly;
-  height: 100%;
   width: 800px;
 }
 
